--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-asgiref==3.6.0
-backports.zoneinfo==0.2.1
-click==8.1.3
-Django==4.1.5
+Django==4.1.7
 dlib==19.24.0
 face-recognition==1.3.0
 face-recognition-models==0.3.0
-numpy==1.24.1
-opencv-python==4.7.0.68
+numpy==1.24.2
+opencv-python==4.7.0.72
+packaging==23.0
 Pillow==9.4.0
-sqlparse==0.4.3
-
+pytesseract==0.3.10
 
